# bridger

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  a.txt  bridger.sh  rust-toolchain.toml  vercel.json
assistants/bin-e2e/: Cargo.toml
assistants/bin-e2e/src/: bridge.rs  config.rs  lib.rs  task.rs
assistants/bin-s2s/: Cargo.toml
assistants/bin-s2s/src/: cli.rs  error.rs  lib.rs  traits.rs  types.rs
assistants/client-beacon/: Cargo.toml
assistants/client-beacon/src/: client.rs  error.rs  types.rs
assistants/client-contracts/: Cargo.toml
assistants/client-contracts/src/: beacon_light_client.rs  chain_message_committer.rs  execution_layer.rs  fee_market.rs  inbound.rs  lane_message_committer.rs  lib.rs  outbound.rs  posa_light_client.rs  simple_fee_market.rs
assistants/client-crab/: Cargo.toml
assistants/client-crab/src/: client.rs  component.rs  config.rs  error.rs  lib.rs
assistants/client-crab/tests/: common.rs  test_component.rs
assistants/client-darwinia/: Cargo.toml
assistants/client-darwinia/src/: client.rs  component.rs  config.rs  error.rs
assistants/client-moonbase/: Cargo.toml
assistants/client-moonbase/src/: client.rs  component.rs  config.rs
assistants/client-pangolin/: Cargo.toml
assistants/client-pangolin/src/: client.rs  component.rs  config.rs  lib.rs
assistants/client-pangolin/tests/: common.rs  test_component.rs
assistants/client-pangoro/: Cargo.toml
assistants/client-pangoro/src/: client.rs  component.rs  config.rs  error.rs
assistants/client-polkadot/: Cargo.toml
assistants/client-polkadot/src/: client.rs  component.rs  config.rs  error.rs
assistants/client-rococo/: Cargo.toml
assistants/client-rococo/src/: client.rs  component.rs  config.rs  error.rs
assistants/relay-e2e/: Cargo.toml
assistants/relay-e2e/src/: error.rs  lib.rs  utils.rs
assistants/relay-s2s/: Cargo.toml
assistants/relay-s2s/src/: error.rs  keepstate.rs  lib.rs
assistants/subquery/: Cargo.toml
assistants/subquery/src/: error.rs
assistants/subquery/tests/: common.rs
bridger/: .editorconfig  Cargo.toml
bridger/bridge-chain/chain-darwinia/: Cargo.toml
bridger/bridge-chain/chain-ethereum/: Cargo.toml
bridger/bridge-chain/chain-millau/: Cargo.toml
bridger/bridge-chain/chain-pangolin/: Cargo.toml
bridger/bridge-chain/chain-template/: Cargo.toml
bridger/bridge-component/: Cargo.toml
bridger/bridge-component/src/: bee.rs  entrypoint.rs  error.rs  http_client.rs  lib.rs  shadow.rs  web3.rs
bridger/bridge-component/tests/: common.rs  http_client.rs  test_component.rs
bridger/bridge-config/: Cargo.toml
bridger/bridge-config/src/: component.rs  entrypoint.rs  lib.rs
bridger/bridge-external/external-s2s/: Cargo.toml
bridger/bridge-service/: Cargo.toml
bridger/bridge-service/src/: entrypoint.rs  lib.rs
bridger/bridge-shared/: Cargo.toml
bridger/bridge-shared/src/: bus.rs  channel.rs  config.rs  lib.rs  material.rs  messages.rs  shared.rs  traits.rs
bridger/bridge-standard/: Cargo.toml
bridger/bridge-standard/src/: chain.rs  component.rs  config.rs  error.rs  lib.rs  service.rs
bridger/bridge-task/: Cargo.toml
bridger/bridge-task/linked-darwinia/: Cargo.toml
bridger/bridge-task/linked-template/: Cargo.toml
bridger/bridge-task/src/: lib.rs  task.rs
bridger/bridge-task/task-darwinia-ethereum/: Cargo.toml
bridger/bridge-task/task-pangolin-millau/: Cargo.toml
bridger/bridge-task/task-template/: Cargo.toml
bridger/chain-darwinia/: Cargo.toml
bridger/chain-darwinia/src/: chain.rs
bridger/chain-ethereum/: Cargo.toml
bridger/chain-ethereum/src/: chain.rs
bridger/chains/chain-millau/: Cargo.toml
bridger/chains/chain-pangolin/: Cargo.toml
bridger/chains/chain-template/: Cargo.toml
bridger/chains/darwinia/: Cargo.toml
bridger/chains/ethereum/: Cargo.toml
bridger/client-darwinia/: Cargo.toml
bridger/client-darwinia/src/: chain.rs
bridger/component/: Cargo.toml
bridger/component/src/: config.rs  entrypoint.rs  error.rs  lib.rs  state.rs
bridger/component/tests/: common.rs  test_component.rs
bridger/components/client-darwinia/: Cargo.toml
bridger/components/client-darwinia-subxt/: Cargo.toml
bridger/components/client-millau/: Cargo.toml
bridger/components/client-pangolin/: Cargo.toml
bridger/components/ethereum/: Cargo.toml
bridger/components/shadow/: Cargo.toml
bridger/components/state/: Cargo.toml
bridger/primitives/: Cargo.toml
bridger/primitives/src/: array.rs  byte.rs  lib.rs
bridger/service-darwinia-ethereum/: Cargo.toml
bridger/service-darwinia-ethereum/src/: lib.rs
bridger/src/: cli.rs  initialize.rs  main.rs
bridger/src/command/: mod.rs  types.rs
bridger/supports/evm-log-tracker/: Cargo.toml
bridger/supports/support-ethereum/: Cargo.toml
bridger/supports/support-keep/: Cargo.toml
bridger/supports/support-s2s/: Cargo.toml
bridger/task-darwinia-ethereum/: Cargo.toml
bridger/task-darwinia-ethereum/src/: bus.rs
bridger/task/linked-darwinia/: Cargo.toml
bridger/task/linked-template/: Cargo.toml
bridger/task/task-darwinia-ethereum/: Cargo.toml  README.md
bridger/task/task-pangolin-millau/: Cargo.toml
bridger/task/task-template/: Cargo.toml
bridger/traits/: Cargo.toml
bridger/traits/src/: lib.rs
bridges/bridge-template/: Cargo.toml
bridges/bridge-template/src/: bus.rs  cli.rs  main.rs  message.rs  task.rs
bridges/crab-crabparachain/: Cargo.toml
bridges/crab-crabparachain/bridge/: Cargo.toml
bridges/crab-crabparachain/docs/: Guide.md
darwinia/: Cargo.toml
darwinia/src/: account.rs  darwinia.rs  error.rs  lib.rs  to_ethereum.rs  types.rs
ethereum/: Cargo.toml
ethereum/src/: chains.rs  client.rs  error.rs  ethereum_api.rs  ethereum_tracker.rs  lib.rs  logs_handler.rs
primitives/: Cargo.toml  README.md
primitives/src/: array.rs  byte.rs  crypto.rs  error.rs  lib.rs  result.rs  runtime.rs
traits/: Cargo.toml
traits/bridge-e2e/: Cargo.toml
traits/bridge-s2s/: Cargo.toml
traits/client-common/: Cargo.toml
traits/feemarket-s2s/: Cargo.toml
traits/src/: error.rs  lib.rs
(+2584 files in other folders)
