[workspace]
members = [
	"primitives",
	"darwinia",
	"provider/darwinia-bridger",
	"provider/substrate-relay/bin",
	"provider/substrate-relay/relays/*",

	"bridger/bin",
	"bridger/bridge-chain/*",
	"bridger/bridge-component",
	"bridger/bridge-linked/*",
	"bridger/bridge-standard",
	"bridger/bridge-task/*",
	"bridger/primitives",
]
