[package]
name = "darwinia-bridger"
version = "0.5.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://docs.rs/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"


[[bin]]
name = "bridger"
path = "src/main.rs"

[dependencies]
