[package]
name = "darwinia-bridger"
version = "0.5.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"


[[bin]]
name = "bridger"
path = "src/main.rs"

[dependencies]

colored = "2"
requestty = "0.1"

structopt = "0.3"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-attributes = "0.1"
color-eyre = "0.5"
strum = { version = "0.21.0", features = ["derive"] }
