[package]
name = "bridge-client-darwinia"
version = "0.1.0"
authors = ["xiaocheng <xiaoch2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
package = "serde"
version = "1"
features = ["derive"]

[dependencies]
jsonrpsee = "0.1.0"
serde_json = "1.0"
thiserror = "1.0.20"
hex = "0.4.2"
anyhow = "1.0.34"
log = "0.4.11"
substrate-subxt = "0.13.0"
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive", "full"] }

[dependencies.primitives]
package = "darwinia-bridge-primitives"
version = "0.3.2"
path = "../primitives"
features = ["runtime", "rpc"]
