[package]
name = "bridge-client-darwinia"
version = "0.1.0"
authors = ["xiaocheng <xiaoch2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
package = "serde"
version = "1"
features = ["derive"]

[dependencies]
jsonrpsee = "0.1.0"
serde_json = "1.0"
thiserror = "1.0.20"
array-bytes = "1.1.0"
anyhow = "1.0.34"
log = "0.4.11"
substrate-subxt = "0.13.0"
sp-keyring = "2.0.0"
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive", "full"] }
web3 = { version = "0.14.0", git = "https://github.com/wuminzhe/rust-web3.git", branch = "v0.14.0", features = ["signing"] }
secp256k1 = { version = "0.19", features = ["recovery"] }

[dependencies.primitives]
package = "darwinia-bridge-primitives"
version = "0.3.2"
path = "../primitives"
features = ["runtime", "rpc"]
