[package]
name = "ethereum"
version = "0.1.0"
authors = ["Aki Wu <wuminzhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
anyhow = "1.0.34"
tokio = { version = "0.2.2", features = ["full"] }
array-bytes = "1.1.0"
async-trait = "0.1.48"
web3 = { version = "0.14.0", git = "https://github.com/wuminzhe/rust-web3.git", branch = "v0.14.0", features = ["signing"] }

