[package]
name = "bridge-primitives"
version = "0.4.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://docs.rs/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
	"Cargo.toml",
	"**/*.rs",
	"README.md",
	"LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2018"

[dependencies]
log = "0.4"
thiserror = "1.0"
uint = "0.8.5"
rlp = "0.4.4"

serde = { version = "1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.1", features = ["derive", "full"] }

rust-crypto = "0.2"
base64 = "0.13"
