[package]
name = "bin-s2s"
version = "0.7.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"


[dependencies]
tracing     = "0.1"
thiserror   = "1.0"

array-bytes = "2"
tokio       = { version = "1", features = ["full"] }

structopt = "0.3"
strum     = { version = "0.21", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }

lifeline = { git = "https://github.com/fewensa/lifeline-rs.git", branch = "threads-safely" }
postage  = "0.4"

support-common     = { path = "../../frame/supports/support-common" }
support-lifeline   = { path = "../../frame/supports/support-lifeline" }
support-toolkit    = { path = "../../frame/supports/support-toolkit" }
