[package]
name = "bin-s2s"
version = "0.7.3"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"


[dependencies]
tracing     = "0.1"
thiserror   = "1.0"
color-eyre  = "0.6"

array-bytes = "2"
async-trait = "0.1"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }

lifeline = { git = "https://github.com/fewensa/lifeline-rs.git", branch = "threads-safely" }
postage  = "0.4"

support-common     = { path = "../../frame/supports/support-common" }
support-lifeline   = { path = "../../frame/supports/support-lifeline" }
support-toolkit    = { path = "../../frame/supports/support-toolkit" }
support-types      = { path = "../../frame/supports/support-types" }

bridge-s2s-traits    = { path = "../../frame/traits/bridge-s2s" }
feemarket-s2s-traits = { path = "../../frame/traits/feemarket-s2s" }
client-common-traits = { path = "../../frame/traits/client-common" }
subquery             = { path = "../subquery", features = [ "bridge-s2s" ] }
relay-s2s            = { path = "../relay-s2s" }
feemarket-s2s        = { path = "../feemarket-s2s" }

[features]
default        = []
solo-with-solo = []
solo-with-para = ["relay-s2s/bridge-parachain"]
para-with-para = ["relay-s2s/bridge-parachain"]
