[package]
name = "client-beacon"
version = "0.7.2"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
futures     = "0.3.21"
web3        = { version = "0.18.0", features = ["signing"] }
thiserror   = "1.0"
bytes       = "1.0"
serde       = { version = "1", features = ["derive"] }
hex         = "0.4"
hamming     = "0.1"
reqwest     = { version = "0.11", features = ["json", "stream"] }
types       = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
tree_hash   = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
client-contracts  = { path = "../client-contracts" }

[patch.crates-io]
eth2_hashing     = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
eth2_serde_utils = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
eth2_ssz         = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
eth2_ssz_derive  = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
eth2_ssz_types   = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
tree_hash        = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
tree_hash_derive = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
