[package]
name = "client-contracts"
version = "0.8.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio       = { version = "1", features = ["full"] }
futures     = "0.3.21"
secp256k1   = { version = "0.21" }
web3        = { version = "0.18.0", features = ["signing"] }
hamming     = "0.1"
rlp         = "0.5.1"
thiserror   = "1.0"
anyhow      = "1.0"
