[package]
authors       = ["Darwinia Network <hello@darwinia.network>"]
description   = "Darwinia bridger"
documentation = "https://rust-docs.darwinia.network/bridger"
edition       = "2021"
homepage      = "https://github.com/darwinia-network/bridger"
include       = ["Cargo.toml", "**/*.rs", "README.md", "LICENSE"]
keywords      = ["substrate", "darwinia"]
license       = "MIT"
name          = "client-crab"
readme        = 'README.md'
repository    = "https://github.com/darwinia-network/bridger"
version       = "0.7.3"

[dependencies]
thiserror  = "1"
tracing    = "0.1"
serde      = { version = "1", features = ["derive"] }

array-bytes      = "6"
codec            = { package = "parity-scale-codec", version = "3" }
subxt            = { git = "https://github.com/darwinia-network/subxt", branch = "polkadot-v0.9.38" }
bp-darwinia-core = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.38" }

## maybe common
async-trait = { optional = true, version = "0.1" }

## substrate
sp-core             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-runtime          = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-finality-grandpa = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

## common traits
client-common-traits  = { path = "../../traits/client-common", features = ["subxt-darwinia"] }

## s2s client
finality-grandpa      = { optional = true, version = "0.16" }
bridge-s2s-traits     = { optional = true, path = "../../traits/bridge-s2s", features = ["advanced-types"] }

## feemarket s2s
feemarket-s2s-traits = { optional = true, path = "../../traits/feemarket-s2s", features = ["advanced-types"] }

ecdsa-pair           = { path = "../ecdsa-pair" }

support-toolkit  = { path = "../../frame/supports/support-toolkit", features = ["convert"] }

[dev-dependencies]
tokio      = { version = "1", features = ["full"] }
serde_json = "1"

[features]
default     = []
substrate   = [
  "sp-finality-grandpa",
  "sp-runtime",
]
bridge-s2s         = [
  "substrate",
  "async-trait",
  "finality-grandpa",
  "bridge-s2s-traits",
]
bridge-darwinia-crab = ["bridge-s2s", "bridge-s2s-traits/bridge-parachain"]

feemarket-s2s   = [
  "async-trait",
  "feemarket-s2s-traits",
]
feemarket-darwinia-crab = ["feemarket-s2s"]
