[package]
name = "client-darwinia"
version = "0.7.3"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
thiserror  = "1"
tracing    = "0.1"
serde      = { version = "1", features = ["derive"] }

array-bytes      = "6"
codec            = { package = "parity-scale-codec", version = "3" }
subxt            = { git = "https://github.com/darwinia-network/subxt", branch = "polkadot-v0.9.30" }
bp-darwinia-core = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.30" }

## maybe common
async-trait           = { optional = true, version = "0.1" }

## substrate
sp-core             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime          = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-finality-grandpa = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

## common traits
client-common-traits  = { path = "../../traits/client-common", features = ["subxt-darwinia"] }

## s2s client
finality-grandpa      = { optional = true, version = "0.16" }
bridge-s2s-traits     = { optional = true, path = "../../traits/bridge-s2s", features = ["advanced-types"] }

## e2e client
bridge-e2e-traits = { optional = true, path = "../../traits/bridge-e2e" }

## feemarket s2s
feemarket-s2s-traits = { optional = true, path = "../../traits/feemarket-s2s", features = ["advanced-types"] }

ecdsa-pair      = { path = "../ecdsa-pair" }

support-toolkit  = { path = "../../frame/supports/support-toolkit", features = ["convert"] }

[features]
default     = []
substrate   = [
  "sp-finality-grandpa",
  "sp-runtime",
]
bridge-s2s         = [
  "substrate",
  "async-trait",
  "finality-grandpa",
  "bridge-s2s-traits",
]
bridge-darwinia-crab = ["bridge-s2s", "bridge-s2s-traits/bridge-parachain"]
feemarket-s2s   = [
  "async-trait",
  "feemarket-s2s-traits",
]
feemarket-darwinia-crab = ["feemarket-s2s"]
bridge-e2e = ["async-trait", "bridge-e2e-traits"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

