[package]
authors       = ["Darwinia Network <hello@darwinia.network>"]
description   = "Darwinia bridger"
documentation = "https://rust-docs.darwinia.network/bridger"
edition       = "2021"
homepage      = "https://github.com/darwinia-network/bridger"
include       = ["Cargo.toml", "**/*.rs", "README.md", "LICENSE"]
keywords      = ["substrate", "darwinia"]
license       = "MIT"
name          = "client-pangolin"
readme        = 'README.md'
repository    = "https://github.com/darwinia-network/bridger"
version       = "0.7.0"

[dependencies]
thiserror = "1"
tracing   = "0.1"

serde       = { version = "1", features = ["derive"] }

array-bytes = "2"
codec       = { package = "parity-scale-codec", version = "2" }
subxt       = { git = "https://github.com/darwinia-network/subxt.git", branch = "darwinia-v0.12.5" }
bp-pangolin = { git = "https://github.com/darwinia-network/darwinia-bridges-substrate.git", branch = "darwinia-v0.12.5" }

## maybe common
async-trait = { optional = true, version = "0.1" }

## substrate
sp-finality-grandpa = { optional = true, git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.5" }
sp-runtime          = { optional = true, git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.5" }
sp-core             = { optional = true, git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.5" }

## s2s client
finality-grandpa      = { optional = true, version = "0.14" }
bridge-s2s-traits     = { optional = true, path = "../../frame/traits/bridge-s2s", features = ["advanced-types"] }

## feemarket s2s
feemarket-s2s-traits = { optional = true, path = "../../frame/traits/feemarket-s2s", features = ["advanced-types"] }

support-toolkit  = { path = "../../frame/supports/support-toolkit", features = ["convert"] }

[dev-dependencies]
tokio      = { version = "1", features = ["full"] }
serde_json = "1"

[features]
default     = []
substrate   = [
  "sp-finality-grandpa",
  "sp-runtime",
  "sp-core",
]
bridge-s2s  = [
  "substrate",
  "async-trait",
  "finality-grandpa",
  "bridge-s2s-traits",
]
bridge-s2s-pangoro                  = ["bridge-s2s"]
bridge-s2s-pangolin-parachain       = ["bridge-s2s", "bridge-s2s-traits/bridge-parachain"]
bridge-s2s-pangolin-parachain-alpha = ["bridge-s2s", "bridge-s2s-traits/bridge-parachain"]

feemarket-s2s = [
  "async-trait",
  "feemarket-s2s-traits",
]
feemarket-s2s-pangoro                  = ["feemarket-s2s"]
feemarket-s2s-pangolin-parachain       = ["feemarket-s2s"]
feemarket-s2s-pangolin-parachain-alpha = ["feemarket-s2s"]
