[package]
authors       = ["Darwinia Network <hello@darwinia.network>"]
description   = "Darwinia bridger"
documentation = "https://rust-docs.darwinia.network/bridger"
edition       = "2021"
homepage      = "https://github.com/darwinia-network/bridger"
include       = ["Cargo.toml", "**/*.rs", "README.md", "LICENSE"]
keywords      = ["substrate", "darwinia"]
license       = "MIT"
name          = "client-pangoro"
readme        = 'README.md'
repository    = "https://github.com/darwinia-network/bridger"
version       = "0.7.3"

[dependencies]
thiserror = "1"
tracing   = "0.1"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

array-bytes      = "6"
bp-darwinia-core = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.37" }
codec            = { package = "parity-scale-codec", version = "3" }
subxt            = { git = "https://github.com/darwinia-network/subxt", branch = "polkadot-v0.9.37" }

## maybe common
async-trait = { optional = true, version = "0.1" }

## substrate
sp-core             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-finality-grandpa = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime          = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

## common traits
client-common-traits = { path = "../../traits/client-common", features = ["subxt-darwinia"]}

## s2s client
bridge-s2s-traits = { optional = true, path = "../../traits/bridge-s2s", features = ["advanced-types"] }
finality-grandpa  = { optional = true, version = "0.16" }

## feemarket s2s
feemarket-s2s-traits = { optional = true, path = "../../traits/feemarket-s2s", features = ["advanced-types"] }

## e2e client
bridge-e2e-traits = { optional = true, path = "../../traits/bridge-e2e" }

ecdsa-pair        = { path = "../ecdsa-pair" }

support-toolkit = { path = "../../frame/supports/support-toolkit", features = ["convert"] }

[features]
bridge-ethv2           = ["bridge-e2e-traits", "async-trait"]
bridge-s2s             = ["substrate", "async-trait", "finality-grandpa", "bridge-s2s-traits"]
bridge-s2s-pangolin    = ["bridge-s2s"]
default                = []
feemarket-s2s          = ["async-trait", "feemarket-s2s-traits"]
feemarket-s2s-pangolin = ["feemarket-s2s"]
substrate              = ["sp-finality-grandpa", "sp-runtime"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
