[package]
authors       = ["Darwinia Network <hello@darwinia.network>"]
description   = "Darwinia bridger"
documentation = "https://rust-docs.darwinia.network/bridger"
edition       = "2021"
homepage      = "https://github.com/darwinia-network/bridger"
include       = ["Cargo.toml", "**/*.rs", "README.md", "LICENSE"]
keywords      = ["substrate", "darwinia"]
license       = "MIT"
name          = "client-polkadot"
readme        = 'README.md'
repository    = "https://github.com/darwinia-network/bridger"
version       = "0.7.3"

[dependencies]
thiserror = "1"
tracing   = "0.1"

serde       = { version = "1", features = ["derive"] }

array-bytes = "2"
codec       = { package = "parity-scale-codec", version = "2" }
subxt       = { git = "https://github.com/darwinia-network/subxt", branch = "polkadot-v0.9.30" }
bp-polkadot   = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.30" }

## maybe common
async-trait = { optional = true, version = "0.1" }

## substrate
sp-finality-grandpa = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime          = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core             = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

## common traits
client-common-traits  = { optional = true, path = "../../frame/traits/client-common" }

## s2s client
finality-grandpa      = { optional = true, version = "0.14" }
bridge-s2s-traits     = { optional = true, path = "../../frame/traits/bridge-s2s", features = ["advanced-types"] }

support-toolkit  = { path = "../../frame/supports/support-toolkit", features = ["convert"] }

[features]
default     = []
substrate   = [
  "sp-finality-grandpa",
  "sp-runtime",
  "sp-core",
]
bridge-s2s         = [
  "substrate",
  "async-trait",
  "finality-grandpa",
  "client-common-traits",
  "bridge-s2s-traits",
]
bridge-s2s-darwinia = ["bridge-s2s", "bridge-s2s-traits/bridge-parachain"]
